--- a/package.json
+++ b/package.json
@@ -10,15 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
+    "@mui/material": "^7.1.1",
+    "@mui/styled-engine-sc": "^7.1.1",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.12.2",
     "formik": "^2.4.6",
     "nanoid": "^5.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.2",
+    "react-spinners": "^0.17.0",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.18",
     "yup": "^1.6.1"
   },
   "devDependencies": {
